# hinemos-mcp

./: .env.example  .gitignore  README.md  hinemos_client.py  hinemos_mcp_server.py  pyproject.toml  requirements.txt
client/: base.py  calendar.py  collect.py  hinemos_client.py  job.py  monitor.py  monitor_result.py  repository.py
mcp_tools/: __init__.py  calendar.py  job.py  monitor.py  monitor_result.py  repository.py
spec/: hinemos_job_api_spec.md  hinemos_monitor_api_spec.md  hinemos_monitor_result_api_spec.md
